--- a/package.json
+++ b/package.json
@@ -83,53 +83,52 @@
         "@babel/plugin-transform-runtime": "^7.25.9",
         "@babel/preset-env": "^7.26.0",
         "@babel/preset-flow": "^7.25.9",
-        "@babel/preset-react": "^7.25.9",
+        "@babel/preset-react": "^7.26.3",
         "@babel/preset-typescript": "^7.26.0",
-        "@types/bs58": "^4.0.0",
-        "@types/bs58check": "^2.1.0",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^16.11.7",
-        "@types/proxyquire": "^1.3.28",
-        "@types/randombytes": "^2.0.0",
-        "better-npm-audit": "^3.7.3",
-        "bip32": "^4.0.0",
+        "@types/bs58check": "^2.1.2",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.10.2",
+        "@types/proxyquire": "^1.3.31",
+        "@types/randombytes": "^2.0.3",
+        "better-npm-audit": "^3.11.0",
+        "bip32": "^5.0.0-rc.0",
         "bip39": "^3.1.0",
-        "bip65": "^1.0.1",
-        "bip68": "^1.0.3",
-        "bs58": "^4.0.0",
-        "dhttp": "^3.0.0",
+        "bip65": "^1.0.3",
+        "bip68": "^1.0.4",
+        "bs58": "^6.0.0",
+        "dhttp": "^3.0.3",
         "ecpair": "^2.0.1",
-        "eslint": "^9.14.0",
+        "eslint": "^9.17.0",
         "gulp": "^5.0.0",
         "gulp-cached": "^1.1.1",
         "gulp-typescript": "^6.0.0-alpha.1",
         "hoodwink": "^2.0.0",
         "https-browserify": "^1.0.0",
         "minimaldata": "^1.0.2",
-        "mocha": "^10.0.0",
-        "nyc": "^15.1.0",
+        "mocha": "^11.0.1",
+        "nyc": "^17.1.0",
         "os-browserify": "^0.3.0",
-        "prettier": "^2.8.0",
-        "proxyquire": "^2.0.1",
+        "prettier": "^3.4.2",
+        "proxyquire": "^2.1.3",
         "randombytes": "^2.1.0",
-        "regtest-client": "0.2.0",
-        "rimraf": "^2.6.3",
+        "regtest-client": "0.2.1",
+        "rimraf": "^6.0.1",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
-        "tiny-secp256k1": "^2.2.0",
+        "tiny-secp256k1": "^2.2.3",
         "ts-loader": "^9.5.1",
-        "ts-node": "^8.3.0",
-        "typedoc": "^0.25.1",
-        "typescript": "^4.4.4",
-        "typescript-eslint": "^8.13.0",
-        "webpack": "^5.96.1",
-        "webpack-cli": "^5.1.4"
+        "ts-node": "^10.9.2",
+        "typedoc": "^0.27.6",
+        "typescript": "^5.7.2",
+        "typescript-eslint": "^8.19.0",
+        "webpack": "^5.97.1",
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
         "@btc-vision/logger": "^1.0.6",
-        "@eslint/js": "^9.14.0",
-        "@noble/hashes": "^1.2.0",
+        "@eslint/js": "^9.17.0",
+        "@noble/hashes": "^1.6.1",
         "@noble/secp256k1": "^2.1.0",
         "assert": "^2.1.0",
         "babel-loader": "^9.2.1",
@@ -139,13 +138,13 @@
         "bech32": "^2.0.0",
         "bip174": "^2.1.1",
         "browserify-zlib": "^0.2.0",
-        "bs58check": "^3.0.1",
+        "bs58check": "^4.0.0",
         "buffer": "^6.0.3",
         "gulp-clean": "^0.4.0",
         "gulp-eslint-new": "^2.4.0",
         "gulp-logger-new": "^1.0.1",
         "process": "^0.11.10",
-        "typeforce": "^1.11.3",
+        "typeforce": "^1.18.0",
         "varuint-bitcoin": "^1.1.2"
     }
 }
