--- a/package.json
+++ b/package.json
@@ -87,11 +87,11 @@
         "@babel/preset-typescript": "^7.26.0",
         "@types/bs58check": "^2.1.2",
         "@types/mocha": "^10.0.10",
-        "@types/node": "^22.10.2",
+        "@types/node": "^20.17.10",
         "@types/proxyquire": "^1.3.31",
         "@types/randombytes": "^2.0.3",
         "better-npm-audit": "^3.11.0",
-        "bip32": "^5.0.0-rc.0",
+        "bip32": "^4.0.0",
         "bip39": "^3.1.0",
         "bip65": "^1.0.3",
         "bip68": "^1.0.4",
