--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "6.3.7",
+    "version": "6.4.0",
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
         "node": ">=16.0.0"
@@ -55,7 +55,7 @@
         "audit": "better-npm-audit audit -l high",
         "build:tests": "npm run clean:jstests && tsc -p ./test/tsconfig.json",
         "clean": "rimraf build",
-        "clean:jstests": "rimraf 'test/**/!(ts-node-register)*.js'",
+        "clean:jstests": "rimraf --glob \"test/**/!(ts-node-register).js\"",
         "coverage-report": "npm run build && npm run nobuild:coverage-report",
         "coverage-html": "npm run build && npm run nobuild:coverage-html",
         "coverage": "npm run build && npm run nobuild:coverage",
@@ -65,29 +65,29 @@
         "format:ci": "npm run prettier -- --check && npm run prettierjs -- --check",
         "gitdiff:ci": "npm run build && git diff --exit-code",
         "integration": "npm run build && npm run nobuild:integration",
-        "lint": "eslint ts_src/**",
+        "lint": "eslint src/**",
         "lint:tests": "eslint test/**/*.spec.ts",
-        "mocha:ts": "mocha --recursive --require test/ts-node-register",
+        "mocha:ts": "cross-env TS_NODE_PROJECT=test/tsconfig.json mocha -n loader=ts-node/esm -n experimental-specifier-resolution=node --extension ts --timeout 10000 --recursive \"test/**/*.spec.ts\"",
         "nobuild:coverage-report": "nyc report --reporter=lcov",
         "nobuild:coverage-html": "nyc report --reporter=html",
         "nobuild:coverage": "npm run build:tests && nyc --check-coverage --branches 85 --functions 90 --lines 90 mocha && npm run clean:jstests",
         "nobuild:integration": "npm run mocha:ts -- --timeout 50000 'test/integration/*.ts'",
         "nobuild:unit": "npm run mocha:ts -- 'test/*.ts'",
-        "prettier": "prettier \"ts_src/**/*.ts\" \"test/**/*.ts\" --ignore-path ./.prettierignore",
+        "prettier": "prettier \"src/**/*.ts\" \"test/**/*.ts\" --ignore-path ./.prettierignore",
         "test": "npm run build && npm run format:ci && npm run lint && npm run nobuild:coverage",
         "unit": "npm run build && npm run nobuild:unit"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.0",
+        "@babel/core": "^7.27.1",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-transform-runtime": "^7.25.9",
-        "@babel/preset-env": "^7.26.0",
-        "@babel/preset-flow": "^7.25.9",
-        "@babel/preset-react": "^7.26.3",
-        "@babel/preset-typescript": "^7.26.0",
+        "@babel/plugin-transform-runtime": "^7.27.1",
+        "@babel/preset-env": "^7.27.2",
+        "@babel/preset-flow": "^7.27.1",
+        "@babel/preset-react": "^7.27.1",
+        "@babel/preset-typescript": "^7.27.1",
         "@types/bs58check": "^2.1.2",
         "@types/mocha": "^10.0.10",
-        "@types/node": "^20.17.10",
+        "@types/node": "^22.15.21",
         "@types/proxyquire": "^1.3.31",
         "@types/randombytes": "^2.0.3",
         "better-npm-audit": "^3.11.0",
@@ -97,17 +97,17 @@
         "bs58": "^6.0.0",
         "dhttp": "^3.0.3",
         "ecpair": "^2.0.1",
-        "eslint": "^9.17.0",
+        "eslint": "^9.27.0",
         "gulp": "^5.0.0",
         "gulp-cached": "^1.1.1",
         "gulp-typescript": "^6.0.0-alpha.1",
         "hoodwink": "^2.0.0",
         "https-browserify": "^1.0.0",
         "minimaldata": "^1.0.2",
-        "mocha": "^11.0.1",
+        "mocha": "^11.5.0",
         "nyc": "^17.1.0",
         "os-browserify": "^0.3.0",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.3",
         "proxyquire": "^2.1.3",
         "randombytes": "^2.1.0",
         "regtest-client": "0.2.1",
@@ -115,23 +115,23 @@
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "tiny-secp256k1": "^2.2.3",
-        "ts-loader": "^9.5.1",
+        "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
-        "typedoc": "^0.27.6",
-        "typescript": "^5.7.2",
-        "typescript-eslint": "^8.19.0",
-        "webpack": "^5.97.1",
+        "typedoc": "^0.28.5",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.32.1",
+        "webpack": "^5.99.9",
         "webpack-cli": "^6.0.1"
     },
     "dependencies": {
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
         "@btc-vision/logger": "^1.0.6",
-        "@eslint/js": "^9.17.0",
-        "@noble/hashes": "^1.6.1",
-        "@noble/secp256k1": "^2.1.0",
+        "@eslint/js": "^9.27.0",
+        "@noble/hashes": "^1.8.0",
+        "@noble/secp256k1": "^2.2.3",
         "assert": "^2.1.0",
-        "babel-loader": "^9.2.1",
-        "babel-plugin-transform-import-meta": "^2.2.1",
+        "babel-loader": "^10.0.0",
+        "babel-plugin-transform-import-meta": "^2.3.2",
         "babel-preset-react": "^6.24.1",
         "babelify": "^10.0.0",
         "bip32": "^4.0.0",
@@ -145,6 +145,6 @@
         "gulp-logger-new": "^1.0.1",
         "process": "^0.11.10",
         "typeforce": "^1.18.0",
-        "varuint-bitcoin": "^1.1.2"
+        "varuint-bitcoin": "^2.0.0"
     }
 }
