Add Vite browser config and update Babel/Vite setup
Introduces vite.config.browser.ts for browser-specific Vite configuration. Updates .babelrc to improve ES module targeting and bugfixes, removes React preset, and adds new Vite-related dev dependencies in package.json. Also updates ESLint dependencies and Babel packages for compatibility.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "6.4.11",
+    "version": "6.5.0",
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
         "node": ">=16.0.0"
     },
     "exports": {
         ".": {
+            "types": "./build/index.d.ts",
             "browser": "./browser/index.js",
             "import": "./build/index.js",
-            "require": "./build/index.js",
-            "types": "./build/index.d.ts"
+            "require": "./build/index.js"
         },
         "./browser": {
+            "types": "./browser/index.d.ts",
             "import": "./browser/index.js",
-            "require": "./browser/index.js",
-            "types": "./browser/index.d.ts"
+            "require": "./browser/index.js"
         }
     },
     "browser": {
@@ -51,7 +51,7 @@
         "watch": "gulp watch",
         "build": "gulp build",
         "setup": "npm i && npm run build",
-        "browserBuild": "webpack --mode production",
+        "browserBuild": "vite build --config vite.config.browser.ts",
         "audit": "better-npm-audit audit -l high",
         "build:tests": "npm run clean:jstests && tsc -p ./test/tsconfig.json",
         "clean": "rimraf build",
@@ -120,6 +120,9 @@
         "typedoc": "^0.28.5",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.1",
+        "vite": "^7.3.0",
+        "vite-plugin-dts": "^4.5.4",
+        "vite-plugin-node-polyfills": "^0.24.0",
         "webpack": "^5.99.9",
         "webpack-cli": "^6.0.1"
     },
@@ -134,9 +137,9 @@
         "babel-plugin-transform-import-meta": "^2.3.2",
         "babel-preset-react": "^6.24.1",
         "babelify": "^10.0.0",
-        "bip32": "^4.0.0",
         "bech32": "^2.0.0",
         "bip174": "^2.1.1",
+        "bip32": "^4.0.0",
         "browserify-zlib": "^0.2.0",
         "bs58check": "^4.0.0",
         "buffer": "^6.0.3",
