Add worker-based parallel signing infrastructure
Introduces a modular worker pool system for parallel cryptographic signing, supporting both Node.js (worker_threads) and browser (Web Workers) environments. Adds secure key handling, PSBT parallel signing integration, and exposes new exports for worker-based signing pools and related types. Includes tests and helper utilities for PSBT integration.

Add ECC bundle and enhance worker pool for Node.js

Introduces a build script to bundle @noble/secp256k1 for embedding in workers, adds the generated ECC bundle, and updates worker pool logic to support both browser and Node.js (with selectable ECC libraries). Refactors worker initialization, improves type safety, and adds comprehensive tests for the worker pool. Also updates package scripts to include ECC bundling in the build process.

--- a/package.json
+++ b/package.json
@@ -123,19 +123,20 @@
         "clean": "rimraf build",
         "coverage": "vitest run --coverage",
         "doc": "typedoc",
-        "format": "npm run prettier -- --write",
-        "formatjs": "npm run prettier -- --write",
         "format:ci": "npm run prettier -- --check && npm run prettier -- --check",
         "gitdiff:ci": "npm run build && git diff --exit-code",
         "integration": "vitest run --config vitest.config.integration.ts",
         "lint": "eslint src/**",
         "lint:tests": "eslint test/**/*.spec.ts",
         "prettier": "prettier \"src/**/*.ts\" \"test/**/*.ts\" --ignore-path ./.prettierignore",
-        "test": "npm run build && npm run format:ci && npm run lint && vitest run",
+        "test": "npm run build && npm run lint && vitest run",
         "test:watch": "vitest",
         "unit": "vitest run",
+        "bench": "vitest bench benchmark/",
+        "bench:run": "npx tsx benchmark/signing.bench.ts",
         "check:circular": "madge --circular --extensions ts,tsx src/",
-        "prebuild": "npm run check:circular"
+        "prebuild:ecc": "npx tsx scripts/bundle-ecc.ts",
+        "prebuild": "npm run prebuild:ecc && npm run check:circular"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
