Refactor TypeScript configs and update build process
Replaces tsconfig.webpack.json with tsconfig.browser.json and tsconfig.build.json for clearer separation of build targets. Updates tsconfig.base.json with stricter compiler options and modernizes module/target settings. Adjusts tsconfig.json for NodeNext compatibility and updates the build script to use the new build config. Removes 'typeforce' dependency and bumps package version to 7.0.0.

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     },
     "scripts": {
         "watch": "tsc --watch",
-        "build": "eslint src && tsc",
+        "build": "eslint src && tsc --build tsconfig.build.json",
         "setup": "npm i && npm run build",
         "browserBuild": "vite build --config vite.config.browser.ts",
         "audit": "better-npm-audit audit -l high",
