--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,10 @@
 {
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "module": "ESNext",
-        "target": "ES2020",
-        "declaration": true,
-        "outDir": "./build",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "allowSyntheticDefaultImports": true
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "outDir": "./build"
     },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["src/**/*.ts", "test/**/*.ts"],
+    "exclude": ["node_modules"]
 }
