--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -49,6 +49,18 @@ jobs:
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
       - run: npm ci
+      - name: Wait for regtest server to be ready
+        run: |
+          echo "Waiting for regtest server..."
+          for i in $(seq 1 60); do
+            HEIGHT=$(curl -sf http://127.0.0.1:8080/1/b/best/height 2>/dev/null || echo "0")
+            if [ "$HEIGHT" -ge 200 ] 2>/dev/null; then
+              echo "Regtest server ready at height $HEIGHT"
+              break
+            fi
+            echo "  height=$HEIGHT, waiting... ($i/60)"
+            sleep 2
+          done
       - run: APIURL=http://127.0.0.1:8080/1 npm run integration
 
   coverage:
