--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "7.0.0",
+    "version": "7.0.0-alpha.0",
     "sideEffects": false,
     "overrides": {
         "ecpair": {
