--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "7.0.0-alpha.1",
+    "version": "7.0.0-alpha.2",
     "sideEffects": false,
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
@@ -168,7 +168,7 @@
         "vitest": "^4.0.18"
     },
     "dependencies": {
-        "@btc-vision/bip32": "file:../bip32",
+        "@btc-vision/bip32": "^7.0.0",
         "@btc-vision/ecpair": "file:../ecpair",
         "@btc-vision/logger": "^1.0.8",
         "@noble/hashes": "^2.0.1",
