Add browser-compatible test suite and config
Introduces browser-adapted test files for payments, PSBT, script, and signing workers under test/browser/. Adds static JSON imports for fixtures and replaces Node.js-specific APIs with browser-safe alternatives. Updates package.json with browser test scripts and adds vitest.config.browser.ts for browser testing configuration. Also updates test/psbt.spec.ts to support browser environments.

--- a/package.json
+++ b/package.json
@@ -144,6 +144,8 @@
         "test": "npm run build && npm run lint && vitest run",
         "test:watch": "vitest",
         "unit": "vitest run",
+        "test:browser": "vitest run --config vitest.config.browser.ts",
+        "test:browser:watch": "vitest --config vitest.config.browser.ts",
         "bench": "vitest bench benchmark/",
         "bench:run": "npx tsx benchmark/signing.bench.ts",
         "check:circular": "madge --circular --extensions ts,tsx src/",
