--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     },
     "exports": {
         ".": {
+            "react-native": {
+                "types": "./build/index.d.ts",
+                "import": "./build/index.js",
+                "default": "./build/index.js"
+            },
             "browser": {
                 "types": "./browser/index.d.ts",
                 "import": "./browser/index.js",
@@ -29,6 +34,11 @@
             "default": "./browser/index.js"
         },
         "./workers": {
+            "react-native": {
+                "types": "./build/workers/index.react-native.d.ts",
+                "import": "./build/workers/index.react-native.js",
+                "default": "./build/workers/index.react-native.js"
+            },
             "browser": {
                 "types": "./browser/workers/index.d.ts",
                 "import": "./browser/workers/index.js",
