Split worker entrypoints and refine pool API
Introduce platform-specific worker entry points and a shared export surface to avoid Node.js-only modules in browser builds. Added src/workers/index.browser.ts and src/workers/index.shared.ts, updated src/workers/index.node.ts to export node-specific pool and provide detectRuntime/createSigningPool helpers, and refactored src/workers/index.ts to re-export shared APIs and use runtime detection. Extend SigningPoolLike in src/workers/types.ts with lifecycle and worker-count properties. Update vite.config.browser.ts to add a browser-workers redirect plugin and build entry for workers/index to ensure safe browser bundling. Also add an optional peerDependency for react-native-worklets and bump package version to 7.0.0-alpha.5.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "7.0.0-alpha.4",
+    "version": "7.0.0-alpha.5",
     "sideEffects": false,
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
@@ -200,6 +200,14 @@
         "vite-plugin-top-level-await": "^1.6.0",
         "vite-plugin-wasm": "^3.5.0",
         "vitest": "^4.0.18"
+    },
+    "peerDependencies": {
+        "react-native-worklets": ">=0.7.0"
+    },
+    "peerDependenciesMeta": {
+        "react-native-worklets": {
+            "optional": true
+        }
     },
     "dependencies": {
         "@btc-vision/bip32": "^7.0.2",
