--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
         "browserify-zlib": "^0.2.0",
         "bs58check": "^4.0.0",
         "buffer": "^6.0.3",
+        "esbuild": "^0.27.2",
         "process": "^0.11.10",
         "varuint-bitcoin": "^2.0.0"
     }
