--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "7.0.0-alpha.10",
+    "version": "7.0.0-alpha.11",
     "sideEffects": false,
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
@@ -164,8 +164,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
-        "@types/bs58check": "^3.0.1",
-        "@types/node": "^25.0.10",
+                "@types/node": "^25.0.10",
         "@types/randombytes": "^2.0.3",
         "@vitest/browser": "^4.0.18",
         "@vitest/browser-playwright": "^4.0.18",
@@ -202,10 +201,14 @@
         "vitest": "^4.0.18"
     },
     "peerDependencies": {
-        "react-native-worklets": ">=0.7.0"
+        "react-native-worklets": ">=0.7.0",
+        "react-native-quick-crypto": ">=1.0.0"
     },
     "peerDependenciesMeta": {
         "react-native-worklets": {
+            "optional": true
+        },
+        "react-native-quick-crypto": {
             "optional": true
         }
     },
@@ -219,9 +222,8 @@
         "bech32": "^2.0.0",
         "bip174": "^3.0.0",
         "browserify-zlib": "^0.2.0",
-        "bs58check": "^4.0.0",
+        "@scure/base": "^1.2.4",
         "buffer": "^6.0.3",
-        "esbuild": "^0.27.2",
         "process": "^0.11.10",
         "varuint-bitcoin": "^2.0.0"
     }
